# pypsa_battery_degradation

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: compute_degradation.py
src/pypsa_battery_degradation/: __init__.py  degradation.py  pypsa_interface.py  rainflow_analysis.py  stress_factors.py
